--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html> 
+<html>
+    <head>
+            <title></title>
+    </head>
+
+    <body>
+        Hello World
+    </body>
+</html>
