--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html> 
 <html>
     <head>
-            <title></title>
+            <title>Hello World</title>
     </head>
 
     <body>
         Hello World
+        <p>ini adalah tags paragraf</p>
     </body>
 </html>
