--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
     <head>
             <title>Hello World</title>
+            <link rel="stylesheet" href="./styles/style.css">
     </head>
 
     <body>
-        Hello World
-        <p>ini adalah tags paragraf</p>
-        <h1>ini adalah tags h1</h1>
+    <div class="profile-container">
+        <img src="./images/mob.jpg" alt="" class="profile-image">
+    </div>
+        <h2 class="profile-name">Mob Physco</h2>
     </body>
 </html>
